# miniload-controller-client

./: .gitignore  CMakeLists.txt  README.MD  agoran_action.cpp  agoran_action.hpp  build-project.bat  components.cpp  components.hpp  enums.hpp  main.cpp  main_window.cpp  refresh-project.bat  state.cpp  types.hpp  utils.cpp  utils.hpp
src/: AgoranCard.cpp  AgoranCard.hpp  AgoransState.cpp  AgoransState.hpp  ColorScheme.hpp  MainWindow.cpp  UIElements.cpp  UIElements.hpp  UIHelper.hpp  UIHelpers.cpp  UIHelpers.hpp  components.cpp  enums.hpp  main_window.cpp  main_window.hpp  state.hpp  utils.cpp  utils.hpp
